--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.MuiPaper-root-16 {
+  margin: 10px;
+}
+
